--- a/CodeWalletWidgetApp/en.lproj/Localizable.strings
+++ b/CodeWalletWidgetApp/en.lproj/Localizable.strings
@@ -10,6 +10,7 @@
 // General
 "Oops" = "Oops";
 "Cancel" = "Cancel";
+"Delete" = "Delete";
 
 // Barcode Table
 "TableViewEmptyMessage" = "There have been no barcodes added yet.";
@@ -26,6 +27,10 @@
 
 // Location Notification
 "LocationNotificationMessage" = "Show Barcode.";
+
+
+// Code Settings
+"CodeDeletionMessage" = "Are you sure?";
 
 // Settings
 "Warning" = "Warning";
