--- a/CodeWalletWidgetApp/de.lproj/Main.strings
+++ b/CodeWalletWidgetApp/de.lproj/Main.strings
@@ -93,3 +93,7 @@
 "Mrq-PC-KRE.text" = "Barcode Größe";
 "w9H-3o-tAp.text" = "Wert unter Code anzeigen";
 "wDU-E6-2T4.text" = "Ortsverknüpfung aktiv";
+
+//MARK: Settings
+
+"phY-C7-QGP.text" = "Tutorial wiederholen";
