--- a/CodeWalletWidgetApp/de.lproj/Main.strings
+++ b/CodeWalletWidgetApp/de.lproj/Main.strings
@@ -86,6 +86,7 @@
 "MV6-Va-gXk.normalTitle" = "Ort setzen";
 "ez0-or-IJp.text" = "Mit Ort verknüfen";
 "fMk-UT-E6R.normalTitle" = "Löschen";
+"X0M-Ex-d7G.placeholder" = "Ort suchen";
 
 //MARK: Code Settings
 
