--- a/CodeWalletWidgetApp/en.lproj/InfoPlist.strings
+++ b/CodeWalletWidgetApp/en.lproj/InfoPlist.strings
@@ -6,6 +6,6 @@
   Copyright © 2018 Alexander Schulz. All rights reserved.
 */
 
-"NSLocationAlwaysUsageDescription" = "Your location is needed to provide location specific notifications with your barcodes.";
-"NSLocationWhenInUseUsageDescription" = "Your location is needed to provide location specific notifications with your barcodes.";
-"NSLocationAlwaysAndWhenInUseUsageDescription" = "Your location is needed to provide location specific notifications with your barcodes.";
+"NSLocationAlwaysUsageDescription" = "Fore- and Background location is needed to provide location specific notifications with your barcodes.";
+"NSLocationWhenInUseUsageDescription" = "Fore- and Background location is needed to provide location specific notifications with your barcodes.";
+"NSLocationAlwaysAndWhenInUseUsageDescription" = "Fore- and Background location is needed to provide location specific notifications with your barcodes.";
