Allow Editing of Codes

--- a/CodeWalletWidgetApp/de.lproj/Localizable.strings
+++ b/CodeWalletWidgetApp/de.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "Oops" = "Ups";
 "Cancel" = "Abbrechen";
 "Delete" = "Löschen";
+"Save" = "Speichern";
 
 // Barcode Table
 "TableViewEmptyMessage" = "Du hast noch keine Barcodes hinzugefügt.";
